# quetzpy

./: .gitignore  Issues.md  LICENCE  Quetzalcoatl.py  Quetzalcoatl___EXPERIMENT_Data_Wrangling.ipynb  README.md  TO_DO.md  bearer_token.json  data_PekinExpress.json  demo.py  insert_scraped_data.py  main.py  main_setup.json  pyproject.toml  requirements.txt  run.sh  test.py  twitter_query.sh
Python_packages/: insert_data_functions.py
Quetzalcoatl/: extractor.py  runner.py
Quetzalcoatl/modules/: data_mining.py  twitter_connection.py
__config__/: DEMO_configuration_extractor.json  DEMO_configuration_runner.json
data/csv/: data_PekinExpress.csv  data_SoutienBooba.csv  data_webscraping.csv
data/json/: data_PekinExpress.json  data_SoutienBooba.json  data_webscraping.json
modules/: data_cleaning.py  data_mining.py  tweeter_connection.py
src/: Quetzalcoatl.py
src/modules/: data_mining.py  data_stats.py  decorators.py  twitter_connection.py
src/quetzpy/: __init__.py  extractor.py  params_manager.py  runner.py
src/quetzpy/modules/: data_cleaning.py  data_mining.py  data_stats.py
